[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Fonts/kfn_22_o2.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Interface/Btn_Middle1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Interface/Btn_Middle.png" type="Texture" id=3]
[ext_resource path="res://Assets/MainMenu.png" type="Texture" id=4]
[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=5]
[ext_resource path="res://Scenes/TransitionScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Interface/Btn_MiddleB.png" type="Texture" id=7]
[ext_resource path="res://Assets/Fonts/kf_16_o1.tres" type="DynamicFont" id=8]
[ext_resource path="res://Assets/Interface/Switch1.png" type="Texture" id=9]
[ext_resource path="res://Assets/HTP.png" type="Texture" id=10]
[ext_resource path="res://Assets/Fonts/kfn_14_o1.tres" type="DynamicFont" id=11]
[ext_resource path="res://Assets/Interface/Switch.png" type="Texture" id=12]
[ext_resource path="res://Audio/Button.ogg" type="AudioStream" id=13]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1024, 600 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HB" type="HBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 75
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu_1" type="VBoxContainer" parent="Background/HB"]
margin_left = 224.0
margin_right = 474.0
margin_bottom = 600.0
custom_constants/separation = 100
alignment = 1

[node name="PlayGame" type="TextureButton" parent="Background/HB/Menu_1"]
margin_top = 150.0
margin_right = 250.0
margin_bottom = 250.0
rect_min_size = Vector2( 250, 100 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="Background/HB/Menu_1/PlayGame"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "Start game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowToPlay" type="TextureButton" parent="Background/HB/Menu_1"]
margin_top = 350.0
margin_right = 250.0
margin_bottom = 450.0
rect_min_size = Vector2( 250, 100 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="Background/HB/Menu_1/HowToPlay"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "How To Play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu_2" type="VBoxContainer" parent="Background/HB"]
margin_left = 549.0
margin_right = 799.0
margin_bottom = 600.0
custom_constants/separation = 100
alignment = 1

[node name="Credits" type="TextureButton" parent="Background/HB/Menu_2"]
margin_top = 150.0
margin_right = 250.0
margin_bottom = 250.0
rect_min_size = Vector2( 250, 100 )
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="Background/HB/Menu_2/Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "Credits"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureButton" parent="Background/HB/Menu_2"]
margin_top = 350.0
margin_right = 250.0
margin_bottom = 450.0
rect_min_size = Vector2( 250, 100 )
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="Background/HB/Menu_2/Quit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Background"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Label2" type="Label" parent="Background"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -89.0
margin_right = 512.0
custom_fonts/font = ExtResource( 8 )
text = "Bug disclaimer : To teleport for the first time, press \"Q\" twice."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTP" type="TextureRect" parent="Background"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 10 )

[node name="Close" type="TextureButton" parent="Background/HTP"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -124.0
margin_top = 50.0
margin_right = -24.0
margin_bottom = 125.0
rect_min_size = Vector2( 100, 75 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 12 )
expand = true

[node name="Label" type="Label" parent="Background/HTP/Close"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 11 )
text = "Close tutorial"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransitionScreen" parent="." instance=ExtResource( 6 )]

[node name="Btn1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[connection signal="pressed" from="Background/HB/Menu_1/PlayGame" to="." method="_on_PlayGame_pressed"]
[connection signal="pressed" from="Background/HB/Menu_1/HowToPlay" to="." method="_on_HowToPlay_pressed"]
[connection signal="pressed" from="Background/HB/Menu_2/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Background/HB/Menu_2/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Background/HTP/Close" to="." method="_on_Close_pressed"]
